@@ -41,3 +41,6 @@ val check_conv_record : constr * types list -> constr * types list ->
     (int * constr)
 
 val set_solve_evars : (env -> evar_map -> constr -> evar_map * constr) -> unit
+
+val second_order_matching : transparent_state -> env -> evar_map -> 
+  existential -> constr -> evar_map * bool
